Servers and Extras
Added the TCP and UDP server beginning files, started to create the TCP one, and moved around some things and fucked with others

--- a/0 NMG ICA/NMG/NMG.vcxproj
+++ b/0 NMG ICA/NMG/NMG.vcxproj
@@ -147,6 +147,8 @@
   <ItemGroup>
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="NMG.cpp" />
+    <ClCompile Include="TCPServer.cpp" />
+    <ClCompile Include="UDPServer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h" />
