UDP server, finishing TCP and Client

--- a/0 NMG ICA/NMG/NMG.vcxproj.filters
+++ b/0 NMG ICA/NMG/NMG.vcxproj.filters
@@ -38,5 +38,11 @@
     <ClInclude Include="Messaage.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="TCPServer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="UDPServer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
