--- a/0 NMG ICA/NMG/NMG.vcxproj
+++ b/0 NMG ICA/NMG/NMG.vcxproj
@@ -153,6 +153,8 @@
   <ItemGroup>
     <ClInclude Include="Game.h" />
     <ClInclude Include="Messaage.h" />
+    <ClInclude Include="TCPServer.h" />
+    <ClInclude Include="UDPServer.h" />
     <ClInclude Include="util.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
