--- a/0 NMG ICA/NMG/NMG.vcxproj.filters
+++ b/0 NMG ICA/NMG/NMG.vcxproj.filters
@@ -44,5 +44,8 @@
     <ClInclude Include="UDPServer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Message.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
